prevent scrolling on mobile

--- a/landingPage/style.css
+++ b/landingPage/style.css
@@ -1,3 +1,14 @@
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* This is the key property that prevents scrolling */
+  position: fixed; /* This prevents bounce effects on iOS */
+}
+
+
 /* Make canvas cover full screen */
 canvas {
   display: block;
@@ -30,7 +41,6 @@ canvas {
   color: black;
   text-decoration: none;
 }
-
 
 #icon{
   width: 3rem;
